<resources>
    <string name="app_name">CosaApplication</string>
    <string name="name">Name</string>
    <string name="button">Let's go to the next activity</string>
    <string name="insert_something">Insert something here!</string>
    <string name="lower_button">Check for camera permissions</string>
    <string name="hello_from_2nd_activity">Welcome to a new activity!</string>
    <string name="button2">Share button</string>
    <string name="button3">Let's go to a new file!</string>
    <string name="write_something">Write a message!</string>
    <string name="write_message">Write a message!</string>
    <string name="buttonAsync">Async Activity</string>
    <string name="sleep_time_in_seconds">Sleeping time is (seconds)</string>
    <string name="run_async_task">Async Task - Open</string>
</resources>